--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,11 @@
 ﻿[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  #
+  from = "/old-path"
+  to = "/new-path"
+  status = 301
+  force = false
+  query = {path = ":path"} #  apply this rule for /old-path?path=example
+  conditions = {Language = ["en","es"], Country = ["US"]}
+
+[[redirects]]
+  from = "/news"
+  to = "/blog"
